# terminal-snake

./: .gitignore  build.spec  classes.py  config.json  config.py  pyproject.toml  readme.md  requirements.txt  snake.py  terminal-snake.py
src/snake/: __init__.py  __main__.py  auto.py
