[project]
name = "terminal-snake"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = ["pyco~=1.0.0"]

[project.scripts]
snake = "snake.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
src = ["src"]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D1", "T20", "S311"]
